<resources>
    <string name="app_name">Mozie</string>
    <string name="login_description">A Mozie alkalmazás segítségével gyorsan és könnyen tájékozódhatsz a mozikban vetített új filmekről, sőt még akár jegyet is vásárolhatsz út közben. Kérlek jelentkezz be az alkalmazás használatához.</string>
    <string name="login_success">Sikeres bejelentkezés.</string>

    <!-- Errors -->
    <string name="error_login_unknown">Hiba történt a bejelentkezés közben.</string>
    <string name="error_login_network">Szerver hiba.</string>
    <string name="error_login_facebook">Facebook error.</string>
    <string name="error_network_problem">Hálózati hiba.</string>

    <!-- Tab titles -->
    <string name="menu_title_movies">Filmek</string>
    <string name="menu_title_schedule">Műsor</string>
    <string name="menu_title_tickets">Jegyek</string>
    <string name="menu_title_profile">Profil</string>

    <!-- Movies tab -->
    <string name="title_recommeneded">Neked ajánlott</string>
    <string name="title_soon">Hamarosan</string>
    <string name="title_now">Már műsoron</string>
    <string name="button_ticket_purchasing">JEGYVÁSÁRLÁS</string>
    <string name="title_description">Leírás</string>
    <string name="title_actors">Szereplők</string>
    <string name="length_text">%1$d perc</string>
    <string name="toolbar_title_movies">Filmek</string>
    <string name="share_movie_content">Na ki jön el velem megnézni?\n\n%1$s\n\n%2$s\n%3$s</string>

    <!-- Schedule tab / Ticket picker -->
    <string name="empty_schedule_text">Ezen a napon már nincs több vetítés.</string>
    <string name="empty_cinema_text">A műsor megtekintéséhez kérlek válassz ki felül egy mozit.</string>
    <string name="cinema_spinner_empty">Válassz mozit…</string>
    <string-array name="cinema_spinner_empty">
        <item>Válassz mozit…</item>
    </string-array>
    <string-array name="spinner_empty">
        <item>---</item>
    </string-array>
    <string name="day_today">Ma</string>
    <string-array name="days_of_week">
        <item>Hétfő</item>
        <item>Kedd</item>
        <item>Szerda</item>
        <item>Csütörtök</item>
        <item>Péntek</item>
        <item>Szombat</item>
        <item>Vasárnap</item>
    </string-array>
    <string name="screening_voice">(HANG: %1$s)</string>
    <string name="year_month_day_format">%1$04d.%2$02d.%3$02d</string>
    <string name="hour_minute_type_format">%1$02d:%2$02d (%3$s)</string>
    <string name="hour_minute_format">%1$02d:%2$02d</string>
    <string name="btn_next">Következő</string>
    <string name="btn_pay">Fizetés</string>

    <string name="toolbar_ticket_type_picker">Jegyek kiválasztása</string>
    <string name="toolbar_seat_picker">Ülőhelyek kiválasztása</string>
    <string name="toolbar_ticket_summary">Összegzés</string>
    <string name="text_price_ft">%1$d Ft</string>
    <string name="empty_text_ticket_picker">Válassz ki egy vetítést hogy lásd a jegytípusokat.</string>

    <!--    Seat picker    -->
    <string name="taken_text">Foglalt</string>
    <string name="available_text">Üres</string>
    <string name="chosen_text">Kiválasztott</string>
    <string name="empty_text_seat_picker">Válassz ki egy vetítést hogy lásd a termet.</string>

    <!--    Ticket summary    -->
    <string name="summary_movie_name_header">%1$s - %2$s</string>
    <string name="summary_screening_date_format">%1$04d.%2$02d.%3$02d %4$02d:%5$02d</string>
    <string name="summary_empty_header">---</string>
    <string name="title_cart">Kosár</string>
    <string name="title_sum">Összesen:</string>
    <string name="price_huf">%1$d Ft</string>
    <string name="quantity">%1$d db</string>
    <string name="error_braintree">Hiba történt fizetés közben.</string>
    <string name="text_successful_payment">Sikeres jegyvásárlás!</string>
    <string name="text_failed_payment">Sikertelen vásárlás.</string>

    <!--    Ticket    -->
    <string name="date_title">Időpont:</string>
    <string name="price_title">Ár:</string>
    <string name="title_quantity">Mennyiség:</string>
    <string name="room_title">Terem</string>
    <string name="row_title">Sor</string>
    <string name="seat_title">Szék</string>

    <!--    User tickets    -->
    <string name="title_my_tickets">Jegyeim</string>
    <string name="empty_text_user_tickets">Még nincsenek jegyeid.</string>
    <string name="msg_session_expired">Lejárt a session.</string>

    <!--    Profile    -->
    <string name="logout">Kijelentkezés</string>
    <string name="name_last_first">%1$s %2$s</string>
    <string name="name_last_middle_first">%1$s %2$s %3$s</string>
    <string name="msg_logout_success">Kijelentkeztél.</string>
</resources>
