<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/tvEmptyText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/margin_medium"
        android:text="@string/empty_text_seat_picker"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium"
        android:visibility="gone" />

    <com.otaliastudios.zoom.ZoomLayout
        android:id="@+id/seats_zoom_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:visibility="visible"
        app:alignment="top|center_horizontal"
        app:hasClickableChildren="true"
        app:minZoom="0.9"
        app:minZoomType="zoom"
        app:transformation="centerInside"
        app:transformationGravity="auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/canvas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_extra_large"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_cinema_canvas" />

            <GridLayout
                android:id="@+id/grid_seats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:alignmentMode="alignBounds"
                android:columnCount="12"
                android:rowCount="12"
                android:useDefaultMargins="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/margin_medium"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="@dimen/image_menu_item_vertical_padding"
                    android:src="@drawable/view_seat_chosen" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/chosen_text"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/margin_medium"
                    android:paddingEnd="@dimen/image_menu_item_vertical_padding"
                    android:src="@drawable/view_seat_taken" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/taken_text"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_small" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="@dimen/margin_medium"
                    android:paddingEnd="@dimen/image_menu_item_vertical_padding"
                    android:src="@drawable/view_seat_empty" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/available_text"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_size_small" />

            </LinearLayout>
        </LinearLayout>
    </com.otaliastudios.zoom.ZoomLayout>
</FrameLayout>