<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivPoster"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_image_height"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/colorAccent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPoster"
                tools:text="Film cime" />

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/tablayout_elevation"
                android:maxLines="1"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:text="Kaland, vígjáték" />

            <TextView
                android:id="@+id/tvLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/tablayout_elevation"
                android:layout_marginEnd="@dimen/margin_small"
                android:textColor="@color/colorTextSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGenre"
                tools:text="90 perc" />

            <TextView
                android:id="@+id/tvDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/title_description"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLength" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintTop_toBottomOf="@id/tvDescriptionTitle"
                tools:text="Mit tennél, ha bármit megtehetnél, következmények nélkül? A szakítófélben lévő Nyles (Andy Samberg – Brooklyn 99 – Nemszázas körzet) napról-napra elkíséri barátnőjét egy Palm Springs-i esküvőre. Ugyanarra. Nyles ugyanis időhurokba került, és mindig ugyanaz az egyetlen nap ismétlődik az életében. Az éppen aktuális napon Nyles a menyasszony nővérére, Sarah-ra (Cristin Milioti – Így jártam anyátokkal) hajt, a vendégekkel gyűjtött tapasztalatait kihasználva persze gyorsan egyenesbe is kerül. Ekkor azonban Sarah is belekerül az időhurokba." />

            <TextView
                android:id="@+id/tvActorsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/title_actors"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvActors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvActorsTitle"
                tools:itemCount="1"
                tools:listitem="@layout/item_actors" />

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:layout_constraintTop_toBottomOf="@id/rvActors" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@android:color/transparent"
        android:paddingTop="@dimen/margin_small"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:paddingVertical="@dimen/margin_small">

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/icon_close"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/btnShare"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/icon_share"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/btnPurchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginVertical="@dimen/margin_large"
        android:background="@drawable/action_btn_background"
        android:elevation="@dimen/tablayout_elevation"
        android:text="@string/button_ticket_purchasing"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium" />
</FrameLayout>